# arxiv-paper-curator

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
src/: dependencies.py  exceptions.py  main.py  middleware.py
src/config/: default_settings.py  ollama_settings.py  opensearch_settings.py  postgres_settings.py
src/db/: factory.py
src/db/interfaces/: postgresql.py
src/routers/: ping_router.py
src/schemas/: __init__.py
src/services/: ollama_service.py
src/settings/: __init__.py  default.py  postgres.py
