[project]
name = "arxiv-paper-curator"
version = "0.1.0"
description = "A tool for curating and managing arXiv papers"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]


[tool.ruff]
line-length = 130
exclude = ["notebooks/**", ".venv/**"]
src = ["src", "tests"]
lint.select = [
  "I",
]
