[project]
name = "arxiv-paper-curator"
version = "0.1.0"
description = "A tool for curating and managing arXiv papers"
readme = "README.md"
requires-python = ">=3.12,<=3.14"
dependencies = [
    "fastapi==0.121.1",
    "loguru==0.7.3",
    "pydantic==2.12.4",
    "pydantic-settings==2.11.0",
    "sqlalchemy==2.0.44",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]


[tool.ruff]
line-length = 130
exclude = ["notebooks/**", ".venv/**"]
src = ["src", "tests"]
lint.select = [
  "I",
]

[tool.mypy]
packages = ["src"]
explicit_package_bases = true
